<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
   
    
      <View  
        android:layout_height="1dip"
        android:layout_width="fill_parent"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:background="@color/lightgrey" />
      

    <TableRow
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/layout1_magazine_1"
            style="@style/magazine_news_layout_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txt_magezine_1_title1"
                style="@style/magazine_title"
                android:layout_width="match_parent"
                android:text="@string/title1" />

            <TextView
                android:id="@+id/txt_magezine_1_body1"
                style="@style/magazine_body"
                android:text="@string/body1" />
        </LinearLayout>
              
        <View
            android:layout_width="1dip"
            android:layout_height="fill_parent"
            android:background="@color/lightgrey" />
       

        <LinearLayout
            style="@style/magazine_news_layout_right"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txt_magezine_1_title2"
                style="@style/magazine_title"
                android:text="@string/title2" />

            <TextView
                android:id="@+id/txt_magezine_1_body2"
                style="@style/magazine_body"
                android:text="@string/body2" />

        </LinearLayout>

    </TableRow>

    <TableRow 
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    <ImageView
        android:id="@+id/img_magazine_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/magazine_image" />
    </TableRow>
    
     <TableRow
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            style="@style/magazine_news_layout_left"
            android:orientation="vertical" 
            android:layout_weight="1">

            <TextView
                android:id="@+id/txt_magazine_1_title3"
                style="@style/magazine_title"
                android:text="@string/title3" />

            <TextView  
                android:id="@+id/txt_magazine_1_body3"
                style="@style/magazine_body"
                android:text="@string/body3" />
        </LinearLayout>
        
         <View  
        android:layout_height="130dip"
        android:layout_width="1dip"
        android:background="@color/lightgrey" />

        <LinearLayout
            style="@style/magazine_news_layout_right"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txt_magazine_1_title4"
                style="@style/magazine_title"
                android:text="@string/title4" />

            <TextView
                android:id="@+id/txt_magazine_1_body4"
                style="@style/magazine_body"
                android:text="@string/body4" />

        </LinearLayout>
       </TableRow>
       
     
      <View  
        android:layout_height="1dip"
        android:layout_width="fill_parent"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:paddingTop="2dip"
        android:background="@color/lightgrey" />
      
      <TableRow 
         android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">       
      <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txt_magazine_1_title5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/title5"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txt_magazine_1_body5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/body5"
                android:textSize="12sp" />

        </LinearLayout>
        </TableRow>

</LinearLayout>
